inventory/stage4-final-network-policy.json
{
    "apiVersion": "networking.k8s.io/v1",
    "kind": "NetworkPolicy",
    "metadata": {
        "annotations": {
            "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"networking.k8s.io/v1\",\"kind\":\"NetworkPolicy\",\"metadata\":{\"annotations\":{},\"name\":\"model-ingress\",\"namespace\":\"intro-openshift-ai\"},\"spec\":{\"ingress\":[{\"from\":[{\"podSelector\":{\"matchLabels\":{\"intro-ai-model-client\":\"true\"}}}],\"ports\":[{\"port\":8080,\"protocol\":\"TCP\"}]}],\"podSelector\":{\"matchLabels\":{\"serving.kserve.io/inferenceservice\":\"command-helper\"}},\"policyTypes\": [...]
        },
        "creationTimestamp": "2026-09-22T16:59:02Z",
        "generation": 1,
        "name": "model-ingress",
        "namespace": "intro-openshift-ai",
        "resourceVersion": "2855506",
        "uid": "6c484e04-327f-4b15-b454-cfc4145b0a4c"
    },
    "spec": {
        "ingress": [
            {
                "from": [
                    {
                        "podSelector": {
                            "matchLabels": {
                                "intro-ai-model-client": "true"
                            }
                        }
                    }
                ],
                "ports": [
                    {
                        "port": 8080,
                        "protocol": "TCP"
                    }
                ]
            }
        ],
        "podSelector": {
            "matchLabels": {
                "serving.kserve.io/inferenceservice": "command-helper"
            }
        },
        "policyTypes": [
            "Ingress"
        ]
    }
}
